--- a/Aula15_24_11/index.html
+++ b/Aula15_24_11/index.html
@@ -29,6 +29,18 @@
             <input type="radio" name="aula" id="iot" value="iot">Internet das coisas<br>
             <input type="radio" name="aula" id="dpi" value="dpi">Desenv. para internet<br>
         </fieldset>
+        <fieldset>
+            <legend>Selecione</legend>
+            UF
+            <select>
+                <option value="SP">SP</option>
+                <option value="MG">MG</option>
+                <option value="RJ">RJ</option>
+                <option value="BA">BA</option>
+                <option value="PI">PI</option>
+                <option value="ES">ES</option>
+            </select>
+        </fieldset>
        <input type="submit" value="Enviar 📨"><input type="reset" value="Limpar">
     </form>
 </body>
@@ -40,3 +52,6 @@
 <!--No campo [radio] para que seja selecionado somente um item da lista, todos os [name]terão que ser iguais-->
 
 <!-- [ctrl]+[alt]+[seta baixo] | [alt]+[click] para selecionar várias linhas de uma vez-->
+
+
+<!--[option]+[value] para criar listas de opções com itens definidos, como de cidades por exemplo-->
